# Rust-Password-Manager

./: .gitignore  Cargo.toml
.github/workflows/: static.yml
src/: encryption.rs  main.rs  persistency.rs  suggest_password.rs  types.rs
src/interfaces/: cli.rs
