[package]
name = "pass-man"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7.5"
block-modes = "0.9.1"
hex-literal = "0.4.1"
rand = "0.8.5"
rust-crypto = "0.2.36"
serde = {version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
sha2 = "0.10.8"
